hphp/hack/test/typecheck/global_const11.php
<?hh

const int X = (int)null;
